include(FetchContent)
set(FETCHCONTENT_QUITE FALSE CACHE INTERNAL "")
FetchContent_Declare(
    googletest
    GIT_REPOSITORY    https://github.com/google/googletest.git
    GIT_TAG           v1.17.x
    GIT_PROGRESS      ON
    GIT_SHALLOW       1
)
set(BUILD_GMOCK   OFF CACHE INTERNAL "")
set(INSTALL_GTEST OFF CACHE INTERNAL "")
FetchContent_MakeAvailable(googletest)